# Logistics-Demand-Forecasting-Using-Machine-Learning

./: README.md  main.py  pyproject.toml  requirements.txt
data/: backtest_comparison_2025.csv  forecast_2026.csv  preprocessing_config.pkl  processed_features.csv
notebooks/: 1_eda.ipynb  2_preprocessing.ipynb  3_training.ipynb  4_evaluation.ipynb  5_forecasting.ipynb
