[project]
name = "solvative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastai>=2.8.6",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "neuralprophet>=0.5.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.52.2",
    "xgboost>=3.1.2",
]
